# cua

./: .cursorignore  .dockerignore  .env.example  .gitignore  .lycheeignore  .pre-commit-config.yaml  .prettierignore  .release-please-manifest.json  ADVANCED_FEATURES.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_AUDIT.md  Development.md  Dockerfile  FLOSS_BEST_PRACTICES_AUDIT.md  JOURNAL.md  JOURNAL_VIDEO.md  LINUX_PARITY_AUDIT.md  Makefile  OVERNIGHT_JOURNAL_2026-05-23.md  PLAN_PYTHON_WRAPPER.md  PROFESSIONAL_TRADING_AGENT.md  PYTHON_PACKAGING_CHANGES.md  Package.swift  README.md  README_shopping_api.md  SECURITY.md  TESTING.md  TODO.md  TRADINGVIEW_SETUP.md  TRADING_AGENT_ARCHITECTURE.md  TRADING_AGENT_COMPLETE.md  WINDOWS_SESSION0_STATUS.md  ai_query_processor.py  apply_changes.sh  bandlab_clean.mid  bandlab_cool_groove.mid  (+57 more)
datasets/cua-bench-basic/click-button/: pyproject.toml
demo/jukebox/orchestrator/: Cargo.toml
demo/jukebox/orchestrator/src/: main.rs
demo/multi-cursor/legacy-app/: Cargo.toml
demo/multi-cursor/legacy-app/src/: main.rs
demo/multi-cursor/orchestrator/: Cargo.toml
demo/multi-cursor/orchestrator/src/: main.rs
docs/scripts/docs-mcp-server/: Dockerfile  flake.nix  main.py  pyproject.toml
example_tasks/basic_gui_env/: main.py  pyproject.toml
lib/fleets/: README.md  pyproject.toml
lib/fleets/cyclops_sdk/: __init__.py  _schema.py
libs/cua-bench/: .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  plan.md  pyproject.toml  sync-to-remote.sh
libs/cua-bench/.github/workflows/: bump-version.yml  pypi-publish.yml
libs/cua-bench/KiCad-task/: README.md  main.py  netlist_compare.py  test_kicad_task.py
libs/cua-bench/cua_bench/: __init__.py  actions.py  bot.py  core.py  decorators.py  desktop.py  environment.py  iconify.py  main.py  netlist_compare.py  runners.py  tracing.py  types.py  utils.py
libs/cua-bench/cua_bench/agents/: __init__.py  base.py  cua_agent.py  gemini.py  gui_owl.py  opencua_agent.py  qwen35_agent.py  qwen3vl_agent.py
libs/cua-bench/cua_bench/apps/: __init__.py  adobe_photoshop.py  calendar.py  godot.py  kicad.py  notes.py  openshot.py  registry.py  reminders.py  unity.py
libs/cua-bench/cua_bench/batch/: BUILD.md  __init__.py  gcp.py  solver.py
libs/cua-bench/cua_bench/cli/: __init__.py  main.py
libs/cua-bench/cua_bench/computers/: base.py  remote.py  webtop.py
libs/cua-bench/cua_bench/config/: __init__.py  loader.py  schema.py
libs/cua-bench/cua_bench/processors/: __init__.py  aguvis_stage_1.py  base.py  gui_r1.py
libs/cua-bench/cua_bench/runner/: __init__.py  (+3 more)
libs/cua-bench/scripts/: GUIDE.md  calibrate_tasks.py  diagnose_daytona.py  ohm_bench_submissions.json  ohm_bench_tasks.json  package_kicad_submission.py  run_all_calibration.sh  run_calibration.py
libs/cua-bench/td.css/: README.md  build.js  package-lock.json  server.js
libs/cua-driver-rs/: .bumpversion.cfg  Cargo.toml  DEV_LOOP_WINDOWS_VM.md  PARITY.md
libs/cua-driver-rs/docs/: dedup-audit.md
libs/cua-driver-rs/sandbox/: run-tests-in-sandbox.ps1  sandbox-runner.ps1
libs/cua-driver-rs/scripts/: install-local.ps1  install-local.sh  install.ps1  install.sh
libs/cua-driver-rs/test-apps/: .gitignore
libs/cua-driver/python/: .cua-driver-generated-files  .cua-driver-uniffi-generated-files  .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  build_wheel.py  hatch_build.py  pyproject.toml
libs/cua-driver/rust/: .bumpversion.cfg  .gitignore  CHANGELOG.md  Cargo.toml  PARITY.md  README.md  rust-toolchain.toml
libs/fleet/: .dockerignore  .mirror-guard-test  Cargo.toml  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  test.pem  tsconfig.json  vite.config.ts
libs/fleet/backend/: Dockerfile  go.mod  go.sum  main.go  main_test.go
libs/fleet/bindgen-cli/: Cargo.toml  main.rs
libs/fleet/e2e/: device.spec.ts  pools.spec.ts
libs/fleet/js-sdk/: LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
libs/fleet/patches/: @novnc__novnc@1.7.0.patch
libs/fleet/python-sdk/: openapi3.yaml  package.nix  pyproject.toml
libs/fleet/rbac-e2e/: go.mod  go.sum  pool_rbac_test.go
libs/fleet/scripts/: build-browser-sdk-binding.sh  build-sdk-bindings-native.sh  check-sdk-binding-contract-sources.sh  check_sdk_binding_contract_sources.py  cleanup-live-sdk-example.sh  generate-sdk-bindings.sh  run-browser-sdk-binding.sh  run-python-sdk-binding.sh  run-ruby-sdk-binding.sh  run-swift-sdk-binding.sh  test-browser-sdk-bindings.sh  test-cleanup-live-sdk-example.sh  test-generate-sdk-bindings.sh
libs/fleet/sdk/: Cargo.toml  uniffi.toml
libs/fleet/sdk-bindings/: README.md  uniffi.toml
libs/fleet/sdk-core/: Cargo.toml  README.md  rust-toolchain.toml
libs/fleet/sdk-schema/: Cargo.toml  uniffi.toml
libs/fleet/sdk-schema-generator/: go.mod  main.go  main_test.go
libs/fleet/src/: App.tsx  main.tsx
libs/fleet/terraform-provider-cyclops/: README.md  go.mod  go.sum  main.go
libs/python/agent/: .bumpversion.cfg  README.md  example.py  pyproject.toml
libs/python/bench-ui/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/computer/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/cua/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/cua-auto/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/cua-cli/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/cua-cloud/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/cua-fleet/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/cua-sandbox/: .bumpversion.cfg  README.md  hatch_build.py  pyproject.toml
libs/python/cua-sandbox-apps/: .bumpversion.cfg  .gitignore  AGENT_DESIGN.md  README.md  pyproject.toml
libs/python/cua-train/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/mcp-server/: .bumpversion.cfg  CONCURRENT_SESSIONS.md  QUICK_TEST_COMMANDS.sh  README.md  build-extension.py  pyproject.toml  quick_test_local_option.py  test_mcp_server_local_option.py
libs/python/snapshot-manager/: ARCHITECTURE.md  README.md  pyproject.toml
(+5331 files in other folders)
