[project]
name = "simple-env"
version = "0.1.0"
license = "MIT"
authors = [
    { name = "Dillon DuPont", email = "dillon@cua.ai" }
]
requires-python = ">=3.11"
dependencies = []

[tool.cua-bench]
description = "Click a simple button."
difficulty = "easy"
category = "grounding"
tags = ["grounding", "click"]
