[project]
name = "simple-click-button-task-env"
version = "0.1.0"
license = "MIT"
authors = [
    { name = "Dillon DuPont", email = "dillon@trycua.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html5lib>=1.1",
    "pyquery>=2.0.1",
]

[tool.cua-bench]
description = "simple click button task"
difficulty = "easy"
category = "grounding"
tags = []