[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrator"
path = "src/main.rs"
required-features = ["windows-app"]

[features]
default = []
windows-app = []

[dependencies]
# PNG decode + resize for the screenshot-based maze line-diff verification.
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
] }
