[package]
name = "cyclops-sdk-bindgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "cyclops-sdk-bindgen"
path = "main.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
uniffi = { workspace = true, features = ["cli"] }
