[package]
name = "cyclops-sdk-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cyclops-core-runner"
path = "src/core_runner.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
url = "2.5.8"
wit-bindgen = "0.39.0"
