[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cua-agent"
version = "0.7.37"
description = "Cua (Computer Use) Agent for AI-driven computer interaction"
readme = "README.md"
authors = [
    { name = "TryCua", email = "gh@trycua.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.3",
    "asyncio",
    "anyio>=4.4.1",
    "typing-extensions>=4.12.2",
    "pydantic>=2.6.4",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "cua-computer>=0.5.0,<0.6.0",
    "cua-core>=0.1.18,<0.2.0",
    "certifi>=2024.2.2",
    "litellm==1.80.0"
]
requires-python = ">=3.12,<3.14"

[project.optional-dependencies]
openai = []
anthropic = []
qwen = [
    "qwen-vl-utils",
    "qwen-agent",
    "Pillow>=12.1.1",
]
omni = [
    "cua-som>=0.1.0,<0.2.0",
]
uitars = []
uitars-mlx = [
    "mlx-vlm>=0.1.27; sys_platform == 'darwin'"
]
uitars-hf = [
    "accelerate",
    "torch",
    "transformers>=4.54.0"
]
glm45v-hf = [
    "accelerate",
    "torch",
    "transformers-v4.55.0-GLM-4.5V-preview"
]
opencua-hf = [
    "accelerate",
    "torch",
    "transformers>=4.53.0",
    "tiktoken>=0.11.0",
    "blobfile>=3.0.0"
]
internvl-hf = [
    "accelerate",
    "torch",
    "transformers>=4.55.0",
    "einops",
    "timm"
]
moondream3 = [
    "accelerate",
    "torch",
    "transformers>=4.55.0"
]
ui = [
    "gradio>=6.7.0",
    "python-dotenv>=1.0.1",
]
cli = [
    "yaspin>=3.1.0",
]
hud = [
    "hud-python==0.4.52",
]
gemini = [
    "google-genai>=1.41.0",
]
# API-only extras for cloud/container deployments — excludes torch/transformers/local models.
# Supports: openai, anthropic, gemini, uitars (API mode).
cloud = [
    # gemini API SDK
    "google-genai>=1.41.0",
    # cli spinner
    "yaspin>=3.1.0",
    # qwen tool-call formatting (used by generic_vlm.py for API-based Qwen calls)
    "qwen-agent",
    "qwen-vl-utils",
    "Pillow>=10.0.0",
]
all = [
    # uitars requirements
    "mlx-vlm>=0.1.27; sys_platform == 'darwin'",
    "accelerate",
    "torch",
    "transformers>=4.55.0",
    # internvl requirements,
    "einops",
    "timm",
    # opencua requirements
    "tiktoken>=0.11.0",
    "blobfile>=3.0.0",
    # ui requirements
    "gradio>=6.7.0",
    "python-dotenv>=1.0.1",
    # cli requirements
    "yaspin>=3.1.0",
    # gemini requirements
    "google-genai>=1.41.0",
    # qwen requirements
    "qwen-vl-utils",
    "qwen-agent",
    "Pillow>=12.1.1",
]

[tool.uv]
constraint-dependencies = ["fastrtc>0.43.0", "mlx-audio>0.2.3"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["agent/"]