[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cua-computer"
version = "0.5.17"
description = "Computer-Use Interface (CUI) framework powering Cua"
readme = "README.md"
authors = [
    { name = "TryCua", email = "gh@trycua.com" }
]
dependencies = [
    "pillow>=12.1.1",
    "websocket-client>=1.8.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "cua-core>=0.1.18,<0.2.0",
    "pydantic>=2.11.1",
    "mslex>=1.3.0",
]
requires-python = ">=3.12,<3.14"

[project.optional-dependencies]
lume = [
]
lumier = [
]
ui = [
    "gradio>=6.7.0",
    "python-dotenv>=1.0.1",
    "datasets>=3.6.0",
]
all = [
    # Include all optional dependencies
    "gradio>=6.7.0",
    "python-dotenv>=1.0.1",
    "datasets>=3.6.0",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["computer/"]
source-includes = ["tests/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
