[project]
name = "cua-sandbox-apps"
version = "0.1.1"
description = "Universal app catalog and installer pipeline for CUA sandboxes — 10K+ apps across Linux, Windows, macOS, Android"
requires-python = ">=3.11,<3.14"
authors = [{ name = "TryCua", email = "gh@trycua.com" }]
readme = "README.md"

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "cua-sandbox>=0.1.1",
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27.0",
    "thefuzz>=0.22.0",
    "boto3>=1.42.88",
    "botocore[crt]>=1.42.88",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
cua-sandbox-apps = "cua_sandbox_apps.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cua_sandbox_apps"]

[tool.uv.sources]
cua-sandbox = { path = "../cua-sandbox", editable = true }
