[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cua-train"
version = "0.1.0"
description = "Cua Cloud Python client — control and data plane for Cua Cloud desktop VM pools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://run.cua.ai"
Repository = "https://github.com/trycua/cua"

[tool.hatch.build.targets.wheel]
packages = ["src/cua_train"]
