[project]
name = "cua-train"
version = "0.1.1"
description = "Cua Cloud Python client — control and data plane for Cua Cloud desktop VM pools"
readme = "README.md"
license = "MIT"
authors = [
    { name = "TryCua", email = "hello@trycua.com" }
]
keywords = [
    "cua",
    "computer-use",
    "cloud",
    "vm",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://run.cua.ai"
Repository = "https://github.com/trycua/cua"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cua_train"]
