[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cua-mcp-server"
description = "MCP Server for Computer-Use Agent (Cua)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
version = "0.1.16"
authors = [
    {name = "TryCua", email = "gh@trycua.com"}
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp>=1.6.0,<2.0.0",
    "cua-agent[all]>=0.8.0",
    "cua-computer>=0.4.0,<0.5.0",
]

[project.scripts]
cua-mcp-server = "mcp_server.server:main"

[tool.pdm]
distribution = true

[tool.pdm.build]
source-includes = ["README.md", "LICENSE"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.9.1",
    "ruff>=0.0.292",
]
