[project]
name = "winarena-adapter"
version = "0.1.0"
description = "Windows Arena benchmark adapter for cua-bench"
requires-python = ">=3.11"

# Core dependencies - minimal set for basic functionality
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "python-docx>=1.0.0",
    "pdfplumber>=0.10.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "rapidfuzz>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "cssselect>=1.2.0",
    "aiohttp>=3.8.0",
    "odfpy>=1.4.1",  # Required by docs.py for ODT file support (check_highlighted_words)
]

[project.optional-dependencies]
# Media processing (VLC evaluators only - GIMP evaluators are dead code)
# Required for: compare_images, compare_audios, compare_videos, etc.
media = [
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "imagehash>=4.3.0",
    "fastdtw>=0.3.4",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "pyacoustid>=1.2.0",
    "mutagen>=1.46.0",
]

# Browser evaluators (Chrome, Edge getters)
browser = [
    "playwright>=1.40.0",
    "LnkParse3>=1.4.0",
    "pydrive>=1.3.1",
]

# Advanced PDF handling
pdf = [
    "PyMuPDF>=1.23.0",
    "pypdf>=3.15.0",
    "PyPDF2>=3.0.0",
    "borb>=2.1.0",
]

# Spreadsheet formula evaluation
spreadsheet = [
    "formulas>=1.2.0",
    "xmltodict>=0.13.0",
]

# Archive extraction
archives = [
    "py7zr>=0.20.0",
]

# All optional dependencies
all = [
    "winarena-adapter[media,browser,pdf,spreadsheet,archives]",
]

[tool.setuptools]
packages = ["winarena_adapter", "winarena_adapter.evaluators", "winarena_adapter.evaluators.getters", "winarena_adapter.evaluators.getters_async", "winarena_adapter.evaluators.metrics"]
package-dir = {"winarena_adapter" = "."}

[tool.cua-bench]
description = "Windows Arena benchmark - 173 tasks across 12 Windows application domains"
difficulty = "hard"
category = "desktop-automation"
tags = ["windows", "desktop", "browser", "office", "file-explorer"]
environment = "windows-qemu"
